# tasks-submission

./: README.md
button counter app/: CMakeLists.txt  README.MD  coverage_test-counter.gcno  coverage_test-test_counter.gcno  coverage_test-unity.gcno  index.html
button counter app/src/: counter.cpp  counter.h  main.cpp  main.qml
button counter app/test/: test_counter.cpp
task2 sub/: readme.md
task2 sub/baseline/: baseline_code.cpp
task2 sub/cuda/: cuda.cpp
task2 sub/open_mpi/: open_mpi.cpp
